# llvm-introspection

./: .gitmodules  README.md
clang/include/clang/Basic/: CodeGenOptions.h
clang/include/clang/Driver/: Options.td
clang/lib/CodeGen/: BackendUtil.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
llvm/: CMakeLists.txt
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/MC/: MCObjectFileInfo.h
llvm/include/llvm/Transforms/Instrumentation/: GlobalsIntrospection.h
llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp
llvm/lib/MC/: MCObjectFileInfo.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  GlobalsIntrospection.cpp  Instrumentation.cpp
llvm/lib/Transforms/Introspection/: CMakeLists.txt  Introspection.cpp
llvm/static/: CMakeLists.txt
llvm/static/introspection/: CMakeLists.txt  globals.bc  globals.c  globals.ll
